--- a/templates/_partials/_nav.html.twig
+++ b/templates/_partials/_nav.html.twig
@@ -1,8 +1,9 @@
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-
+    {# <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" #}
+<header>
 {% block stylesheets %}	
-
+ <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+								          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous"> 
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap-theme.min.css">
  <link rel='stylesheet' href='https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'> 
 <link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
@@ -80,7 +81,7 @@
 
 
 
-  <div class="slider-container w-100 top-0 m-0 p-0">
+ <div class="slider-container w-100 top-0 m-0 p-0">
   <div id="slider">
     <img src="image/bg.jpg" alt="Image 1" />
     <img src="image/bg1.jpeg" alt="Image 2" />
@@ -88,11 +89,11 @@
     <img src="image/bg3.jpeg" alt="Image 4" />
 </div>
 </div>
- 
+
 
 {% block javascripts %}
-     <script src="js/flux.min.js"></script>
-     {# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> #}
+      <script src="js/flux.min.js"></script>
+     {# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>  #}
 
  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
  
@@ -108,14 +109,14 @@
          });
     });
 
-</script>
+</script> 
 
 <script src="js/toggle.js"></script> 
 <script src="js/accordion.js"></script> 
-{# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script><<<<< #}
+{# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> #}
 	{% endblock %}
 
-
+</header>
 
 
 
