--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,8 +14,7 @@
 {# <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 								  integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
 								  crossorigin="anonymous"></script>  #}
-								  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-								          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+								  {
 	
 
 {# <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">  #}
@@ -32,8 +31,8 @@
             		 {# {{ encore_entry_script_tags('main') }}                      #}
 
 		{% endblock %}
-			<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
-			 <script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
+			{# <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script> 
+			 <script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script> #}
 	<link rel="shortcut icon" type="image/svg+xml" href="{{ asset('favicon.svg') }}"> 
    </head>
 
@@ -110,8 +109,9 @@
 			{{ include('_partials/_flash.html.twig') }} 
 
 			{# <div class="container body-container"> #}
+				<main class="main-content">
 				{% block main %} 
-						<main class="main-content">
+					
 				<div class="container-fluid col-sm-12 col-md-6 col-lg-4">
 		
 				{# <div class="row">
@@ -123,7 +123,7 @@
 </div> #}
 
 </div>
-
+	{% endblock %}
 	</main>	
 					{# <div id="sidebar" class="col-sm-3">
 						{% block sidebar %}
@@ -135,7 +135,7 @@
 						{% endblock %} 
 					</div> #}
 				
-			{% endblock %}
+		
 		
 {% endblock %}
 		{% block footer %}
