--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -10,7 +10,7 @@
 
 {# {% endblock %} #}
 {% block stylesheets %}	
-{# <link rel="stylesheet" href="{{ asset('css/style.css')}}"> #}
+<link rel="stylesheet" href="{{ asset('css/style.css')}}">
 
 <style >
 {# import {from} 'https://raw.githubusercontent.com/JohnBlazek/codepen-resources/master/3d-carousel/js/libs.min.js';  #}
@@ -50,7 +50,15 @@ h3{
 	margin-left:35px;
 } #}
 
+.carous {
+  position: relative;
+  margin-top: 50vh;
+  justify-content: center;
+  width: auto;
+  padding-left: 50px;
+  align-items: center;
 
+}
 
 /* hardware accelatator class */	
 .trans3d
@@ -70,7 +78,274 @@ h3{
 		backface-visibility:hidden;*/
 	}
 	
-.carous {
+
+
+	#contentContainer
+	{
+		position:absolute;
+		margin-left:-500px;
+		margin-top:-500px;
+		left: 50%;
+		top:50%;
+		width:100%;
+		height:550px;
+	}
+	
+	#carouselContainer
+	{
+		position:absolute;
+		margin-left:-700px;
+		margin-top:-450px;
+		left:50%;
+		top:60%;
+		width:100vh;
+		height:600px;
+	}
+	
+	.carouselItem
+	{
+		width:300px;
+		height:380px;
+		position:absolute;
+		left:50%;
+		top:50%;
+		margin-left:-120px;
+     margin-right:120px;
+		margin-top:-90px;
+		visibility:hidden;
+	}
+	
+  .carouselItemInner 
+	{
+    width: 300px;
+		height:380px;
+		position:absolute;
+    border-radius: 15px 15px 15px 15px;
+		justify-content: center;
+		font-size:67px;
+		left:43%;
+		top:30%;
+		margin-left:-120px;
+    margin-right:120px;
+		margin-top:-90px;
+		text-align:center;
+		
+    overflow:hidden;
+  }
+
+  a 
+{
+	color:rgba( 255, 255, 255, 1.45 );
+	text-decoration: none;
+text-shadow: -1px -1px 4px rgba(0, 0, 0, .35);
+
+}
+
+a:hover
+{
+	color:rgba( 255, 255, 255, 3 );
+}
+
+  a .carouselItemInner .title 
+	{
+    display: flex;
+    position: relative;
+    justify-items: center;
+    vertical-align: center;
+  overflow: hidden;
+    justify-content: center;
+		font-family: 'quicksandlight', Helvetica, Arial;
+	  font-style: white;
+	  text-shadow: -1px -1px 4px rgba(0, 0, 0, .35);
+    filter: dropshadow(color=#000FFF, offx=1, offy=1);
+		
+		text-align:center;
+		
+  }
+
+.carousel-control.prev .btn-link {
+  display: block;
+  
+  
+    background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+ 
+    border: none;
+ 
+    cursor: pointer;
+
+     transform: translateY(-50%);
+        z-index: 10;
+}
+
+.carousel-control.next .btn-link {
+  right: 10px;
+    display: block;
+    position: relative;
+ 
+     background-color: rgba(0, 0, 0, 0.5);
+    color: white;
+ 
+    border: none;
+
+    cursor: pointer;
+
+    transform: translateY(-50%);
+    z-index: 10;
+}
+@media (max-width: 768px) {
+  .horizontal-collapse__item {
+    flex: 1 1 80%;
+  }
+}
+</style>
+ {% endblock %}  
+{# 
+	<main class="main-content"> #}
+{# <div class"container-fluid position-relative col-md-6 col-sm-12">  #}
+  <section class="contentContainer carous col-md-6 col-sm-12">
+	<div id="contentContainer" class="trans3d col-md-6 col-sm-12"> 
+	<section id="carouselContainer" class="trans3d col-md-6 col-sm-12">
+  {% for categorie in categories %}
+<figure id="item" class="carouselItem trans3d"><img class="carouselItemInner" src="{{ asset(categorie.image) }}" style="object-fit: cover;">
+
+       
+       <div class="carouselItemInner"> <a href="{{ path('app_categorie') }}">{{categorie.libelle}} </a></div>
+
+
+    
+	
+ 
+
+</figure>
+
+	
+ {% endfor %} 
+ 
+</section>
+<div class="btn-link ">
+<button id="prevBtn" class="carousel-control prev">Précédent</button>
+<button id="nextBtn" class="carousel-control next">Suivant</button>
+</div>
+
+
+
+
+
+
+</div>
+
+	</div>
+
+
+  </section>
+
+
+
+
+
+
+{# {% for plat in plats %}
+	<div class"card">
+<img src="{{ asset(plat.image) }}" style="object-fit: cover;">
+
+	<a href="{{ path('app_plat_cat') }}" class="btn btn-link">Plats</a>
+
+</div>
+
+{% endfor %} #}
+
+{% block javascripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.19.1/TweenMax.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script style="ts">
+	// set and cache variables
+	var w, container, carousel, item, itemLength, rY, ticker; 
+	var rotationY = 0;
+	var addX = 0;
+	
+	$(document).ready(init);
+	
+	function init()
+	{
+	    w = $(window);
+	    container = $('#contentContainer');
+	    carousel = $('#carouselContainer');
+	    item = $('.carouselItem');
+	
+	    itemLength = $('.carouselItem').length;
+	
+	    rY = 360 / itemLength;
+	    radius = Math.round((170) / Math.tan(Math.PI / itemLength));
+	
+	    // set container 3d props
+	    TweenMax.set(container, {perspective: 3500});
+	    TweenMax.set(carousel, {z: -(radius)});
+	    
+	    // create carousel item props
+	    for (var i = 0; i < itemLength; i++)
+	    {
+	        var $item = item.eq(i);
+	        var $block = $item.find('.carouselItemInner');
+	        
+	        TweenMax.set($item, {rotationY: rY * i, z: radius, transformOrigin: "50% 50% " + -radius + "px"});
+	        animateIn($item, $block);
+	    }
+	
+	    // Event listeners for buttons
+	    $('#prevBtn').on('click', rotateCarousel.bind(null, -1));
+	    $('#nextBtn').on('click', rotateCarousel.bind(null, 1));
+	    
+	    // set looper ticker
+	    ticker = setInterval(looper, 5000 / 60); // 60 FPS
+	}
+	
+	function animateIn($item, $block)
+	{
+	    var $nrX = 360 * getRandomInt(2);
+	    var $nrY = 360 * getRandomInt(2);
+	        
+	    var $nx = -(2000) + getRandomInt(4000);
+	    var $ny = -(2000) + getRandomInt(4000);
+	    var $nz = -2000 + getRandomInt(2000);
+	        
+	    var $s = 1.5 + (getRandomInt(10) * .1);
+	    var $d = 1 - (getRandomInt(8) * .1);
+	    
+	    TweenMax.set($item, {autoAlpha: 1, delay: $d});
+	    TweenMax.set($block, {z: $nz, rotationY: $nrY, rotationX: $nrX, x: $nx, y: $ny, autoAlpha: 0});
+	    TweenMax.to($block, $s, {delay: $d, rotationY: 0, rotationX: 0, z: 0, ease: Expo.easeInOut});
+	    TweenMax.to($block, $s - .5, {delay: $d, x: 0, y: 0, autoAlpha: 1, ease: Expo.easeInOut});
+	}
+	
+	// Function to handle rotation manually
+	function rotateCarousel(direction) {
+	    rotationY += direction * rY;
+	    TweenMax.to(carousel, 1, {rotationY: rotationY, ease: Quint.easeOut});
+	}
+
+// loops and sets the carousel 3d properties
+function looper()
+{
+    rotationY += 0.5; // Change this value to control the rotation speed
+    TweenMax.to(carousel, 1, {rotationY: rotationY, ease: Quint.easeOut});
+}
+
+function getRandomInt($n)
+{
+    return Math.floor((Math.random() * $n) + 1);    
+}
+
+</script>
+
+
+
+ {% endblock %}  
+
+ {% endblock %}  
+
+
+{# .carous {
   position: relative;
   margin-top: 40vh;
 }
@@ -153,7 +428,7 @@ h3{
 		
   } #}
 
-  .carousel-control {
+  {# .carousel-control {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
@@ -185,7 +460,7 @@ h3{
 		<figure id="item" class="carouselItem trans3d"><img class="carouselItemInner" src="{{ asset(categorie.image) }}" style="object-fit: cover;" ><div class="carouselItemInner trans3d"><a class="carouselItemInner title">{{ (categorie.libelle) }}</a></div> </figure>
    {# <div class='button'>
         <a href="{{ path('app_plat_cat', {'libelle': categorie.libelle}) }}" class="btn btn-link">Plats</a>
-        </div> #}
+        </div> 
 
 	
  {% endfor %} 
@@ -261,17 +536,17 @@ function animateIn($item, $block)
 }
 
 // Function to handle rotation manually
-function rotateCarousel(direction) {
+ function rotateCarousel(direction) {
     rotationY += direction * rY;
     TweenMax.to(carousel, 1, {rotationY: rotationY, ease: Quint.easeOut});
 }
 
 // loops and sets the carousel 3d properties
-{# function looper()
+ function looper()
 {
     rotationY += 0.5; // Change this value to control the rotation speed
     TweenMax.to(carousel, 1, {rotationY: rotationY, ease: Quint.easeOut});
-} #}
+} 
 
 function getRandomInt($n)
 {
@@ -282,7 +557,7 @@ function getRandomInt($n)
 
  {% endblock %}  
 
- {% endblock %}  
+ {% endblock %}    #}
 
 
           {# <img src="image/category/asian_food_cat.jpg">
@@ -290,8 +565,8 @@ function getRandomInt($n)
           <img src="image/category/pizza_cat.jpg">
           <img src="image/category/wrap_cat.jpg">
           <img src="image/category/veggie_cat.jpg">
-        {# ; #}
-            {# <img src="{{ asset(categorie.image) }}">  
+        
+            <img src="{{ asset(categorie.image) }}">  
            </div>
            
                </div>
@@ -345,8 +620,8 @@ function getRandomInt($n)
 	</section>
 </section>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.4.2/js/swiper.min.js"></script>
-{% endblock %}  #}
- {#} <carousel-3d>
+{% endblock %}  
+ <carousel-3d>
  <slide v-for="(slide, i) in slides" :index="i" :key="i">
         <template slot-scope="{ index, isCurrent, leftIndex, rightIndex }">
           <img src="{{ asset(categorie.image) }}">    
@@ -371,7 +646,7 @@ new Vue({
 </script> 
 <script src="https://wlada.github.io/vue-carousel-3d/js/carousel-3d.umd.js"></script> 
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>  #}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.6.10/vue.min.js"></script>  
 
 
 
@@ -893,7 +1168,7 @@ new Vue({
 </section>
 
 
-{% endblock %} #}
+{% endblock %} 
     {# const images = document.querySelectorAll('#slider img');
     let currentIndex = 0;
 
