--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21,6 +21,10 @@
   padding: 0;
   }  
 
+  body {
+    height: 70vh;
+    width: 100vw;
+  }
 footer {
     position: fixed;
     bottom: 0;
@@ -36,10 +40,10 @@ footer {
   
 
 .main-content {
-    margin-top: 20vh; 
+    margin-top: 1vh; 
     margin-bottom: 20vh;
   
-    height: 70vh;
+    height: 100%;
   
     
   }
@@ -349,11 +353,8 @@ textarea {
 
 
 
-input[type=radio] {
-    display:none;
-  }
-  
-.cards {
+
+/* .cards {
     position: absolute;
     display: block;
     border-radius: 3px; 
@@ -364,7 +365,7 @@ input[type=radio] {
     cursor: pointer;
     background-color: transparent;
     border: none;
-}
+} */
 
 
 /* .carousel-button {
@@ -471,16 +472,50 @@ input[type=radio] {
     color: #cbdce2;
   }
 
-.carous {
+/* .carous {
     position: relative;
-    margin-top: 50vh;
+    top: 10vh;
+   
     justify-content: center;
     width: 100%;
-    left:50;
+    vertical-align: middle;
+    padding-top: 40vh;;
     align-items: center;
   
-  }
+  } */
+
+  .carous {
+    position: relative;
+    top: 10vh;
+    overflow: hidden;
+    margin:  auto 0;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
+    margin-left:1vw; 
+    right: 30vw;
+    align-items: center;
+    padding-top: 1vh;
+    justify-self: center;
+    z-index: 20;
   
+  }
+
+  .contentContainer {
+  
+    right: 2%;
+    justify-content: center;
+    margin-top: 5vh;
+    align-items: center;
+   
+    width: auto;
+  }
+
+ .carouselContainer {
+    margin-top: 5vh;
+    width: 100vw
+  }
+   */
   .accordion-group {
     overflow: hidden;
     margin: 0 auto;
@@ -632,15 +667,27 @@ input[type=radio] {
   }
   
 @media (max-width: 768px) {
-  /* #contentContainer  {
+  .carous {
     position: relative;
-    margin-top: 50vh;
+    top: 10vh;
+ 
     justify-content: center;
-    width: auto;
-    
+    width: 100vh;
+    vertical-align: middle;
+    padding-top: 40vh;
     align-items: center;
+    z-index: 2;
   
-  } */
+  }
+
+  .contentContainer {
+    justify-content: center;
+    margin-top: 5vh;
+    margin-left:10vh; 
+    margin-right: 1vh; 
+    width: 100vh;
+  }
+  
 
 .main-navlinks {
     width: 20vh;
@@ -760,19 +807,39 @@ input[type=radio] {
     border: solid 2px;
   }
   
+
+  /* .carousel-control {
+    position: absolute;
+  }
   
+  .carousel-control.prev .btn-link {
   
+    left: 10px;
+    
+      background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+   
+      border: none;
+   
+      cursor: pointer;
   
-  .carous {
-      position: relative;
-      margin-top: 50vh;
-      justify-content: center;
-      width: auto;
+       transform: translateY(-50%);
+          z-index: -10;
+  }
+  
+  .carousel-control.next .btn-link {
+    right: 10px;
       
-      align-items: center;
-    
-    }
-    
+   
+       background-color: rgba(0, 0, 0, 0.5);
+      color: white;
+   
+      border: none;
+  
+      cursor: pointer;
+  
+      z-index: 10;
+  } */
 
     .accordion-group {
       height: 360px;
@@ -834,7 +901,7 @@ input[type=radio] {
       transform: rotate(360deg);
     }
   }
-  
+   
   #search {
     height: 35px;
     width: auto;
