--- a/templates/menu/index.html.twig
+++ b/templates/menu/index.html.twig
@@ -50,15 +50,16 @@ h3{
 	margin-left:35px;
 } #}
 
-.carous {
+{# .carous {
   position: relative;
-  margin-top: 50vh;
+ 
   justify-content: center;
   width: auto;
   padding-left: 50px;
   align-items: center;
+  z-index: 1000;
 
-}
+} #}
 
 /* hardware accelatator class */	
 .trans3d
@@ -88,7 +89,7 @@ h3{
 		left: 50%;
 		top:50%;
 		width:100%;
-		height:550px;
+		height:600px;
 	}
 	
 	#carouselContainer
@@ -98,7 +99,7 @@ h3{
 		margin-top:-450px;
 		left:50%;
 		top:60%;
-		width:100vh;
+		width:100%;
 		height:600px;
 	}
 	
@@ -133,7 +134,7 @@ h3{
     overflow:hidden;
   }
 
-  a 
+ a 
 {
 	color:rgba( 255, 255, 255, 1.45 );
 	text-decoration: none;
@@ -163,59 +164,24 @@ a:hover
 		
   }
 
-.carousel-control.prev .btn-link {
-  display: block;
-  
-  
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
- 
-    border: none;
- 
-    cursor: pointer;
 
-     transform: translateY(-50%);
-        z-index: 10;
-}
 
-.carousel-control.next .btn-link {
-  right: 10px;
-    display: block;
-    position: relative;
- 
-     background-color: rgba(0, 0, 0, 0.5);
-    color: white;
- 
-    border: none;
-
-    cursor: pointer;
-
-    transform: translateY(-50%);
-    z-index: 10;
-}
-@media (max-width: 768px) {
+{# @media (max-width: 768px) {
   .horizontal-collapse__item {
     flex: 1 1 80%;
   }
-}
+} #}
 </style>
  {% endblock %}  
-{# 
-	<main class="main-content"> #}
-{# <div class"container-fluid position-relative col-md-6 col-sm-12">  #}
-  <section class="contentContainer carous col-md-6 col-sm-12">
-	<div id="contentContainer" class="trans3d col-md-6 col-sm-12"> 
-	<section id="carouselContainer" class="trans3d col-md-6 col-sm-12">
+
+
+
+  <section class="contentContainer carous mx-auto ">
+	<div id="contentContainer" class="trans3d "> 
+	<section id="carouselContainer" class="trans3d ">
   {% for categorie in categories %}
 <figure id="item" class="carouselItem trans3d"><img class="carouselItemInner" src="{{ asset(categorie.image) }}" style="object-fit: cover;">
-
-       
-       <div class="carouselItemInner"> <a href="{{ path('app_categorie') }}">{{categorie.libelle}} </a></div>
-
-
-    
-	
- 
+  <div class="carouselItemInner"> <a href="{{ path('app_categorie') }}">{{categorie.libelle}} </a></div>
 
 </figure>
 
@@ -223,24 +189,22 @@ a:hover
  {% endfor %} 
  
 </section>
-<div class="btn-link ">
+{# <div class="btn-link ">
 <button id="prevBtn" class="carousel-control prev">Précédent</button>
 <button id="nextBtn" class="carousel-control next">Suivant</button>
-</div>
+</div> #}
 
 
 
 
 
 
-</div>
+
 
 	</div>
 
 
   </section>
-
-
 
 
 
