--- a/templates/menu/categorie.html.twig
+++ b/templates/menu/categorie.html.twig
@@ -10,17 +10,17 @@
 <link rel="stylesheet" href="{{ asset('css/style.css')}}">
 	
 
-<style>
+{# <style>
 .horizontal-collapse {
-  flex: 1 1 80%;
-  width: 100vw; 
-  margin: auto 0;
+ 
+  width: 100%; 
+  margin: 0;
+  padding: 0;
   display: flex;
   flex-direction: row;
   justify-content: center;
   margin-bottom: auto;
-  margin-left: auto 0;
-  padding-left: auto 0;
+ 
   justify-items: center;
 
 }
@@ -38,18 +38,6 @@
 
 }
 
-.horizontal-collapse__inner {
-  padding: 0;
-  margin: 0 auto;
-  display: flex;
-  flex-direction: row;
-  color: white;
-  border-radius: 2rem;
-  font-size: 3.7rem;
-  font-weight: bold;
-
-}
-
 .horizontal-collapse__inner .cards {
   padding: 0;
   margin: 0 auto;
@@ -62,14 +50,14 @@
 
 }
 
-.horizontal-collapse__inner .cards p {
+.horizontal-collapse__inner {
   padding: 0;
   margin: 0 auto;
   display: flex;
   flex-direction: row;
   color: white;
   border-radius: 2rem;
-  font-size: 2rem;
+  font-size: 4rem;
   font-weight: bold;
 
 }
@@ -225,7 +213,7 @@ position: absolute;
     cursor: pointer;
     background-color: transparent;
     border: none;
-} 
+}  #}
 
 
 {#}.carousel-button {
@@ -255,17 +243,13 @@ position: absolute;
   
    
     
-  } #}
+  } 
 
 .horizontal-collapse {
 
-@media (max-width: 768px) {
-  .horizontal-collapse__item {
-    flex: 1 1 80%;
-  }
-}
 
-{# @media (min-width: 769px) and (max-width: 1200px) {
+
+@media (min-width: 769px) and (max-width: 1200px) {
   .horizontal-collapse__item {
     flex: 1 1 45%;
   }
@@ -275,31 +259,53 @@ position: absolute;
   .horizontal-collapse__item {
     flex: 1 1 30%;
   }
-} #}
-}
+} 
+}#}
 </style>
 {% endblock %}
 
-{% use "bootstrap_5_layout.html.twig" %}
 
-<div class="container-fluid col-sm-12">
-<section class="js-horizontal-collapse horizontal-collapse " data-item-width="120" data-item-max-width="200">
 
-  <ul class="horizontal-collapse__inner">
-      {% for categorie in categories %}
+
+
+{# <section class="js-horizontal-collapse horizontal-collapse " data-item-min-width="120" data-item-max-width="125">
+
+  <ul class="horizontal-collapse__inner"> #}
+
+  <div class="container-fluid ">
+         
+          <div class="row">
+            <ul class="accordion-group" id="accordion">
+                {% for categorie in categories %}
+              <li>
+           
+               <img  src="{{ asset(categorie.image) }}"> 
+               <div class="accordion-overlay cards"> <h2>{{ categorie.libelle }}</h2> </div>
+                
+                      {% endfor %}
+                {# <section class="hidden-xs">
+                  <article>
+                    <p>Rual and rustic</p>
+                  </article>
+                </section> #}
+              </li>
+              </ul>
+          </div>
+    </div>
+     
 
         
-        <li class="js-horizontal-collapse-item horizontal-collapse__item horizontal-collapse__item--{{ loop.index0 }}" tabindex="0" role="button">
+        {# <li class="js-horizontal-collapse-item horizontal-collapse__item horizontal-collapse__item--{{ loop.index0 }}" tabindex="0" role="button">
           <div class="js-horizontal-collapse-item-inner horizontal-collapse__item-inner">
             <div class="horizontal-collapse__inactive-content">
               <img class="js-horizontal-collapse-item-inner cards" src="{{ asset(categorie.image) }}">
               <h2 class="horizontal-collapse__heading">{{ categorie.libelle }}</h2>
             </div>
             <div class="horizontal-collapse__active-content">
-              <h2 class="horizontal-collapse__heading">{{ categorie.libelle }}</h2>
+              <h2 class="horizontal-collapse__heading">{{ categorie.libelle }}</h2> #}
               {# <p class="horizontal-collapse__body">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates modi laudantium facere aut, nemo praesentium, labore doloremque, porro ipsam qui nihil animi ea maiores. Ut excepturi quae veritatis. Recusandae, cupiditate? Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates modi laudantium facere aut, nemo praesentium, labore doloremque, porro ipsam qui nihil animi ea maiores. Ut excepturi quae veritatis. Recusandae, cupiditate?
-              </p> #}
+              </p> 
             </div>
           </div>
          </li>
@@ -309,6 +315,7 @@ position: absolute;
          </ul >
   </section>
 </div>
+
 
 {% block javascripts %}
 <script type="text/javascript" charset="utf-8">
@@ -370,7 +377,9 @@ position: absolute;
       });
     });
   });
-</script>
+</script>#}
+{% block javascripts %}
+<script src="js/accordions.js"></script> 
 {# <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script> #}
 {% endblock %}
 
